# profile_aggregator

./: .gitignore  CLAUDE.md  Cargo.toml  DEBUG_GRACEFUL_SHUTDOWN.md  Dockerfile  FIX_GRACEFUL_SHUTDOWN.md  FIX_SHUTDOWN_CLEAN.md  LICENSE  README.md  SHUTDOWN_IMPROVEMENTS.md  debug_console.sh  rust-toolchain.toml  test_run.sh
.github/workflows/: ci.yml
docs/: event-flow-diagram.md  pagination-gap-analysis.md
scripts/: README.md  build_and_push_profile_aggregator.sh  build_profile_aggregator.sh  build_standalone.sh  push_profile_aggregator.sh  push_standalone.sh  setup-hooks.sh  tag_profile_aggregator_as_stable.sh  test-proxy-image.ts
src/: avatar_sync.rs  lib.rs  main.rs  profile_aggregation_service.rs  profile_image_validator.rs  profile_quality_filter.rs  profile_validation_pool.rs  profile_validation_pool_enhanced.rs  profile_validator.rs  proxy_image_handler.rs  rate_limit_manager.rs  state.rs
src/tests/: mod.rs  profile_aggregation_service_tests.rs  profile_quality_filter_tests.rs  profile_validation_pool_tests.rs  profile_validator_tests.rs
templates/: index.html  random_profiles.html
tests/: integration_tests.rs
