[package]
name = "profile_aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }

# Nostr dependencies
nostr_relay_builder = { path = "../nostr_relay_builder", features = ["axum"] }
nostr-sdk = { git = "https://github.com/verse-pbc/nostr", rev = "ece888e", features = ["all-nips"] }
nostr = { git = "https://github.com/verse-pbc/nostr", rev = "ece888e", features = ["std"] }
nostr-database = { git = "https://github.com/verse-pbc/nostr", rev = "ece888e" }
nostr-lmdb = { git = "https://github.com/verse-pbc/nostr", rev = "ece888e" }

# Image validation
image = { version = "0.25", default-features = false, features = [
    "png", "jpeg", "gif", "webp", "bmp", "ico", "tiff", "avif", "qoi", "dds",
    "exr", "hdr", "pnm", "tga"
] }
imageinfo = "0.7"
imagesize = "0.12"
reqwest = { version = "0.12", features = ["stream"] }
base64 = "0.22"
svgtypes = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utils
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
futures-util = "0.3"
bytes = "1.8"
chrono = "0.4"
rustls = { version = "0.23", features = ["ring"] }

# Configuration
dotenv = "0.15"

# Async utilities
flume = "0.11.1"

# Rate limiting
governor = "0.6"

# Random number generation
rand = "0.8"

# Top-K tracking
heavykeeper = "0.2"

[dev-dependencies]
tempfile = "3.10"

