[package]
name = "profile_aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.40", features = ["full", "tracing"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
console-subscriber = "0.4"

# Nostr dependencies
relay_builder = { git = "https://github.com/verse-pbc/relay_builder", features = ["axum"] }
websocket_builder = { git = "https://github.com/verse-pbc/websocket_builder" }
nostr-sdk = { git = "https://github.com/verse-pbc/nostr", features = ["all-nips"] }
nostr = { git = "https://github.com/verse-pbc/nostr", features = ["std"] }
nostr-database = { git = "https://github.com/verse-pbc/nostr" }
nostr-lmdb = { git = "https://github.com/verse-pbc/nostr" }

# Image validation
image = { version = "0.25", default-features = false, features = [
    "png", "jpeg", "gif", "webp", "bmp", "ico", "tiff", "avif", "qoi", "dds",
    "exr", "hdr", "pnm", "tga"
] }
imageinfo = "0.7"
imagesize = "0.14"
reqwest = { version = "0.12", features = ["stream"] }
base64 = "0.22"
svgtypes = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utils
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
futures-util = "0.3"
bytes = "1.8"
chrono = "0.4"
rustls = { version = "0.23", features = ["ring"] }

# Configuration
dotenv = "0.15"

# Async utilities
flume = "0.11.1"

# Rate limiting
governor = "0.10"

# Random number generation
rand = "0.9"

# Sync primitives
parking_lot = "0.12"

# Top-K tracking
heavykeeper = "0.2"

# CLI dependencies for binaries
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"

[[bin]]
name = "profile-aggregator"
path = "src/main.rs"

[[bin]]
name = "export-import"
path = "src/bin/export_import.rs"

[[bin]]
name = "facesync"
path = "src/bin/facesync.rs"

[dev-dependencies]
tempfile = "3.10"

